<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/glm_search_bar"
        android:title=""
        android:focusable="true"
        android:inputType="textAutoComplete"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/glm_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/glm_filtering"
        android:orderInCategory="100"
        android:title="@string/filtering"
        app:showAsAction="never" />
    <item
        android:id="@+id/glm_bookmark"
        android:orderInCategory="100"
        android:title="@string/bookmark"
        app:showAsAction="never" />

</menu>