<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.vtsb.hipago.domain.entity.TagType"/>

        <variable
            name="model"
            type="com.vtsb.hipago.domain.entity.GalleryBlock" />

        <variable
            name="converter"
            type="com.vtsb.hipago.presentation.view.converter.ListConverter.Companion" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="135dp">

        <ImageView
            android:id="@+id/item_thumbnail"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:contentDescription="@string/description_igb_thumbnail"
            app:bindThumbnail="@{model.thumbnail}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:maxLines="1"
            android:text="@{model.title}"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/item_thumbnail"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/item_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@{String.format(@string/igb_type1_artist, converter.toString(model.tags[TagType.ARTIST]))}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/item_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/item_title"
            tools:text="@string/igb_type1_artist" />


        <TextView
            android:id="@+id/item_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:text="@{String.format(@string/igb_type1_series, converter.toString(model.tags[TagType.SERIES]))}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/item_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/item_artist"
            tools:text="@string/igb_type1_series" />


        <TextView
            android:id="@+id/item_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:text="@{String.format(@string/igb_type1_language, converter.toString(model.tags[TagType.LANGUAGE]))}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/item_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/item_series"
            tools:text="@string/igb_type1_language" />


        <TextView
            android:id="@+id/item_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:text="@{String.format(@string/igb_type1_tags, converter.toString(model.tags[TagType.TAG]))}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/item_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/item_language"
            tools:text="@string/igb_type1_tags" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>