<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.vtsb.hipago.domain.entity.GalleryBlock"/>
        <variable
            name="related"
            type="java.util.List&lt;com.vtsb.hipago.domain.entity.GalleryBlock&gt;" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/app_name">
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/description_fgi_thumbnail"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/ic_baseline_hourglass_full_24"
                app:bindBigThumbnail="@{model.thumbnail}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{model.title}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thumbnail"
                tools:text="Title" />

            <Button
                android:id="@+id/download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/download"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toStartOf="@+id/read"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"/>

            <Button
                android:id="@+id/read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/read"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/download"
                app:layout_constraintTop_toBottomOf="@+id/title"/>


            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="0.0dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="#a0a0a0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/download" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                android:textAlignment="textEnd"
                app:bindDate="@{model.date}"
                app:layout_constraintTop_toBottomOf="@+id/download"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="0000-00-00 00:00"/>

            <LinearLayout
                android:id="@+id/tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                app:inflateTags="@{model}"
                app:layout_constraintTop_toBottomOf="@+id/download"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/related"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                app:inflateRelated="@{related}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tags" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>