<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.vtsb.hipago.presentation.viewmodel.GalleryListViewModel" />

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/app_name">
            </androidx.appcompat.widget.Toolbar>


            <Button
                android:id="@+id/prev"
                android:layout_width="38dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/ic_baseline_navigate_before_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

            <Button
                android:id="@+id/next"
                android:layout_width="38dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/ic_baseline_navigate_next_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>


            <!-- https://www.4te.co.kr/791 [체리필터의 인생이야기] -->
            <EditText
                android:id="@+id/fgl_page_edit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?android:attr/textColorSecondary"
                android:inputType="numberDecimal"
                android:background="@null"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:singleLine="true"
                android:imeOptions="actionGo"
                android:hint="@string/_1"
                android:autofillHints="@string/_1"
                android:text="@{Integer.toString(viewModel.nowPage)}"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toStartOf="@+id/fgl_page_splitter"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="0000" />

            <TextView
                android:id="@+id/fgl_page_splitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/fgl_page_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(viewModel.maxPage)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="start"
                app:layout_constraintStart_toEndOf="@+id/fgl_page_splitter"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:text="-1"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gallery_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/prev"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true" />

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>